--- a/index.html
+++ b/index.html
@@ -1,218 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <title>GEST_AERO – Tableau de bord (version démo)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    header {
-      width: 100%;
-      max-width: 1100px;
-      padding: 16px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .logo {
-      font-weight: 700;
-      font-size: 20px;
-    }
-    .tag {
-      font-size: 12px;
-      padding: 2px 8px;
-      border-radius: 999px;
-      background: #22c55e22;
-      border: 1px solid #22c55e55;
-      color: #bbf7d0;
-      margin-left: 8px;
-    }
-    .env {
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      background: #1e293b;
-      border: 1px solid #334155;
-    }
-    main {
-      width: 100%;
-      max-width: 1100px;
-      padding: 0 20px 40px;
-    }
-    .hero {
-      background: radial-gradient(circle at top left, #1d4ed8, #0f172a 55%);
-      border-radius: 16px;
-      padding: 22px 22px 20px;
-      border: 1px solid #1f2937;
-      margin-bottom: 22px;
-    }
-    .hero h1 {
-      margin: 0 0 8px;
-      font-size: 26px;
-    }
-    .hero p {
-      margin: 0 0 16px;
-      color: #cbd5f5;
-      font-size: 14px;
-      max-width: 640px;
-    }
-    .badge-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-bottom: 10px;
-      font-size: 11px;
-    }
-    .pill {
-      padding: 4px 9px;
-      border-radius: 999px;
-      background: #020617aa;
-      border: 1px solid #1d293b;
-    }
-    .pill span {
-      opacity: .8;
-    }
-    .btn-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 6px;
-    }
-    .btn {
-      padding: 7px 14px;
-      border-radius: 999px;
-      border: 1px solid #38bdf8;
-      background: #0f172a;
-      color: #e0f2fe;
-      font-size: 13px;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    .btn.secondary {
-      border-color: #4b5563;
-      color: #e5e7eb;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 16px;
-      margin-bottom: 24px;
-    }
-    .card {
-      background: #020617;
-      border-radius: 12px;
-      border: 1px solid #1f2937;
-      padding: 14px 14px 12px;
-    }
-    .card h2 {
-      margin: 0 0 4px;
-      font-size: 15px;
-    }
-    .card small {
-      color: #9ca3af;
-      font-size: 11px;
-    }
-    .card ul {
-      margin: 8px 0 0;
-      padding-left: 18px;
-      font-size: 12px;
-      color: #d1d5db;
-    }
-    .footer {
-      font-size: 11px;
-      color: #6b7280;
-      text-align: center;
-      margin-top: 8px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div>
-      <span class="logo">GEST_AERO</span>
-      <span class="tag">Version démo – Tests internes</span>
-    </div>
-    <div class="env">Environnement : <strong>Vercel (Hobby)</strong></div>
-  </header>
-
-  <main>
-    <section class="hero">
-      <h1>Plateforme de gestion aéroportuaire</h1>
-      <p>
-        Cette version est hébergée uniquement pour les tests avec l’équipe (OPS, ATS, AIM, FIN, DIR).
-        Les données affichées ici sont fictives et servent à valider l’ergonomie, les modules et les
-        parcours utilisateurs avant la mise en production.
-      </p>
-      <div class="badge-row">
-        <div class="pill"><strong>Modules :</strong> <span>Mouvements, Parking, Facturation, KPI</span></div>
-        <div class="pill"><strong>Aéroports :</strong> <span>Bouaké, San Pedro, Korhogo, Odienné, Man…</span></div>
-        <div class="pill"><strong>Accès :</strong> <span>Compte de test uniquement</span></div>
-      </div>
-      <div class="btn-row">
-        <a class="btn" href="#">➤ Connexion (maquette)</a>
-        <a class="btn secondary" href="https://github.com/Rahim01baba/GEST_AERO" target="_blank">
-          Voir le dépôt GitHub
-        </a>
-      </div>
-    </section>
-
-    <section class="grid">
-      <article class="card">
-        <h2>Module Mouvements</h2>
-        <small>Planification & enregistrement des vols</small>
-        <ul>
-          <li>Arrivées / Départs (A/D) avec pairing</li>
-          <li>Type d’aéronef, compagnie, origine / destination</li>
-          <li>Préparation de la facturation des redevances</li>
-        </ul>
-      </article>
-
-      <article class="card">
-        <h2>Module Parking</h2>
-        <small>Occupation des postes & timeline 24h</small>
-        <ul>
-          <li>Postes avion, isolé, bretelles rapides</li>
-          <li>Durée de stationnement & suivi des anomalies</li>
-          <li>Support des opérations de dégivrage / maintenance</li>
-        </ul>
-      </article>
-
-      <article class="card">
-        <h2>Facturation & Redevances</h2>
-        <small>Pré-calcul des montants</small>
-        <ul>
-          <li>Redevance atterrissage, parking, passagers</li>
-          <li>Prévisualisation des factures avant émission</li>
-          <li>Export vers la comptabilité SODEXAM</li>
-        </ul>
-      </article>
-
-      <article class="card">
-        <h2>KPI & Reporting</h2>
-        <small>Suivi des performances</small>
-        <ul>
-          <li>Trafic par aéroport et par compagnie</li>
-          <li>Temps de rotation, occupation parking</li>
-          <li>Indicateurs pour la Direction & DPPD</li>
-        </ul>
-      </article>
-    </section>
-
-    <div class="footer">
-      Version de démonstration GEST_AERO – Build Vercel.  
-      Merci de remonter vos retours : ergonomie, informations manquantes, idées d’amélioration.
-    </div>
-  </main>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Airport Manager</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
